<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.ChannelAboutFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/srl_reload_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/_6sdp"
        android:layout_marginEnd="@dimen/_6sdp"
        android:layout_marginTop="@dimen/_6sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_black"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/_16sdp"
                android:text="@string/tv_desc_about_channel"/>

            <TextView
                android:id="@+id/tv_content_desc_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:autoLink="web"
                android:textColorLink="@color/blue"
                android:text="@string/tv_test_content_desc"/>

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:textColor="@color/black"-->
<!--                android:textSize="20dp"-->
<!--                android:text="@string/tv_link_about"/>-->

<!--            <TextView-->
<!--                android:id="@+id/tv_link_about"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="Facebook"/>-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:fontFamily="@font/roboto_black"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/_16sdp"
                android:text="@string/tv_details_about"/>

            <LinearLayout
                android:id="@+id/ll_link_youtube"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginTop="@dimen/_6sdp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/sharp_language_black_24"/>
                <TextView
                    android:id="@+id/tv_link_youtube_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_6sdp"
                    android:textColor="@color/black"
                    android:textColorLink="@color/blue"
                    android:autoLink="web"
                    android:text="@string/tv_link_youtube_test"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginTop="@dimen/_6sdp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/sharp_public_black_24"/>
                <TextView
                    android:id="@+id/tv_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_marginStart="@dimen/_6sdp"
                    android:text="@string/tv_test_location"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginTop="@dimen/_6sdp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/sharp_info_black_24"/>
                <TextView
                    android:id="@+id/tv_published_channel_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_marginStart="@dimen/_6sdp"
                    android:text="@string/tv_published_channel"/>
                <TextView
                    android:id="@+id/tv_published_channel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_marginStart="@dimen/_6sdp"
                    android:text="Jun 23, 2014"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginTop="@dimen/_6sdp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/sharp_trending_up_black_24"/>
                <TextView
                    android:id="@+id/tv_total_view_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_marginStart="@dimen/_6sdp"
                    android:text="650,000 views"/>

            </LinearLayout>


        </LinearLayout>

        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>