<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/cl_user_not_login"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/abl_close_not_login_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_close_not_login_user"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@color/white">

            <ImageView
                android:id="@+id/iv_close_not_login_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_close_black_24"/>

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:id="@+id/ll_cover_comment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/abl_close_not_login_user"
        android:gravity="center"
        android:layout_marginTop="@dimen/_60sdp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp"
            android:src="@drawable/ic_user_not_login"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_40sdp"
            android:paddingEnd="@dimen/_40sdp"
            android:gravity="center"
            android:textSize="@dimen/_15sdp"
            android:text="@string/tv_sign_in"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:text="sign in"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_2sdp"
            android:background="@color/line_horizontal"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:paddingStart="@dimen/_15sdp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:src="@drawable/baseline_settings_black_24"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_15sdp"
                android:textSize="@dimen/_15sdp"
                android:textColor="@color/black"
                android:text="@string/tv_setting"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_15sdp"
            android:paddingStart="@dimen/_15sdp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:src="@drawable/baseline_help_outline_black_24"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_15sdp"
                android:textSize="@dimen/_15sdp"
                android:textColor="@color/black"
                android:text="@string/tv_feedback"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>



    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>