<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.SearchResultsFragment"
    android:background="@color/white"
    android:orientation="vertical">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/abl_nav_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="0dp"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_nav_search_results"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@color/white"
            app:contentInsetLeft="@dimen/_16sdp"
            app:contentInsetStart="@dimen/_6sdp"
            app:contentInsetStartWithNavigation="0dp"
            app:layout_scrollFlags="scroll|enterAlways"
            app:menu="@menu/menu_search_results">

            <ImageButton
                android:id="@+id/ib_back_search_results"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_6sdp"
                android:src="@drawable/baseline_arrow_back_ios_new_black_24"
                android:background="@drawable/custom_button_transparent"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_3sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@color/bg_edittext"
                    android:weightSum="10">

                    <TextView
                        android:id="@+id/tv_search_results"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="8"
                        android:padding="@dimen/_3sdp"
                        android:background="@android:color/transparent"
                        android:paddingStart="@dimen/_6sdp"
                        android:focusable="true"
                        android:hint="@string/title_search"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:textColor="@color/black"
                        android:text="ducahfjhsjahfasfsfa"/>

                    <ImageView
                        android:id="@+id/iv_open_search_new"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_6sdp"
                        android:layout_gravity="right|center_vertical"
                        android:src="@drawable/baseline_close_black_24"/>
                </LinearLayout>


            </FrameLayout>


        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_list_search_results"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/ll_no_results_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            android:src="@drawable/image_not_results_search"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/textSize_20dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/tv_no_results"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/tv_not_results_search"/>

    </LinearLayout>

</LinearLayout>